<resources>
    <string name="app_name">Blog App</string>
    <string name="loginTitle">Login</string>
    <string name="signUp">Create Account</string>
    <string name="post_title">Post Title...</string>
    <string name="post_description">Post Description</string>
    <string name="post_button">Post</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">email</string>
    <string name="password">password</string>
</resources>
